une photo en plus

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>Coming soon... le Wagon</title>
 </head>
 <body>
+	<img src="images.jpg">
 	<h1>Coming soon... le Wagon</h1>
-	
+
 </body>
 </html>
