image center and responsive website

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Coming soon... le Wagon</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
-<body>
-	<img src="images.jpg">
-	<h1>Coming soon... le Wagon</h1>
 
+<body>
+	<div id="container">
+					<img id="logo" src="images.png">
+				<h1>Coming soon... le Wagon</h1>
+</div>
 </body>
 </html>
